--- a/docs/README.ps
+++ b/docs/README.ps
@@ -1,11 +1,11 @@
 %!PS-Adobe-3.0
-%%Creator: groff version 1.22.4
-%%CreationDate: Wed Nov 27 05:31:53 2024
+%%Creator: groff version 1.19.2
+%%CreationDate: Wed Nov 20 20:13:45 2024
 %%DocumentNeededResources: font Times-Bold
 %%+ font Times-Roman
 %%+ font Times-Italic
 %%+ font Courier
-%%DocumentSuppliedResources: procset grops 1.22 4
+%%DocumentSuppliedResources: procset grops 1.19 2
 %%Pages: 13
 %%PageOrder: Ascend
 %%DocumentMedia: Default 612 792 0 () ()
@@ -15,7 +15,7 @@
 %%PageMedia: Default
 %%EndDefaults
 %%BeginProlog
-%%BeginResource: procset grops 1.22 4
+%%BeginResource: procset grops 1.19 2
 %!PS-Adobe-3.0 Resource-ProcSet
 /setpacking where{
 pop
@@ -73,7 +73,6 @@ exch pop add exch pop
 /level0 save def
 1 setlinecap
 1 setlinejoin
-DEFS/BPhook known{DEFS begin BPhook end}if
 72 RES div dup scale
 LS{
 90 rotate
@@ -139,10 +138,7 @@ pop
 findfont
 dup maxlength 1 index/FontName known not{1 add}if dict begin
 {
-1 index/FID ne
-2 index/UniqueID ne
-and
-{def}{pop pop}ifelse
+1 index/FID ne{def}{pop pop}ifelse
 }forall
 /Encoding exch def
 dup/FontName exch def
@@ -180,10 +176,8 @@ newpath
 userdict begin
 /showpage{}def
 /setpagedevice{}def
-mark
 }bind def
 /PEND{
-cleartomark
 countdictstack CNT sub{end}repeat
 level1 restore
 }bind def
@@ -241,26 +235,26 @@ BP
 (ooBar Desktop En)-5.5 E(vir)-.8 E(onment 1)-.36 E/F1 12/Times-Roman@0
 SF(Cop)205.512 152 Q(yright \(c\) FBDE Contrib)-.12 E(utors.)-.24 E 0 Cg
 EP
-%%Page: 2 2
+%%Page: 1 2
 %%BeginPageSetup
 BP
 %%EndPageSetup
-/F0 10/Times-Roman@0 SF(-2-)282.17 48 Q/F1 12/Times-Italic@0 SF(ABSTRA)
-259.842 86 Q(CT)-.36 E/F2 12/Times-Roman@0 SF(This document contains in\
-structions for the installations of the FBDE1.)72 114 Q 0 Cg EP
-%%Page: 3 3
+/F0 12/Times-Italic@0 SF(ABSTRA)259.842 86 Q(CT)-.36 E/F1 12
+/Times-Roman@0 SF(This document contains instructions for the installat\
+ions of the FBDE1.)72 114 Q 0 Cg EP
+%%Page: 2 3
 %%BeginPageSetup
 BP
 %%EndPageSetup
-/F0 10/Times-Roman@0 SF(-3-)282.17 48 Q/F1 20/Times-Bold@0 SF
+/F0 10/Times-Roman@0 SF(-2-)282.17 48 Q/F1 20/Times-Bold@0 SF
 (1. License)245.78 94 Q/F2 12/Times-Roman@0 SF
 (FBDE1 is licensed under the)72 122 Q/F3 12/Times-Bold@0 SF(MPL-2.0)3 E
 F2(license, including this document.)3 E 0 Cg EP
-%%Page: 4 4
+%%Page: 3 4
 %%BeginPageSetup
 BP
 %%EndPageSetup
-/F0 10/Times-Roman@0 SF(-4-)282.17 48 Q/F1 10/Courier@0 SF
+/F0 10/Times-Roman@0 SF(-3-)282.17 48 Q/F1 10/Courier@0 SF
 (Mozilla Public License Version 2.0)108 84 Q
 (==================================)108 96 Q(1. Definitions)108 120 Q
 (--------------)108 132 Q(1.1. "Contributor")108 156 Q
@@ -299,11 +293,11 @@ BP
 (\(a\) any file in Source Code Form that results from an addition to,)
 132 696 Q(deletion from, or modification of the contents of Covered)156
 708 Q(Software; or)156 720 Q 0 Cg EP
-%%Page: 5 5
+%%Page: 4 5
 %%BeginPageSetup
 BP
 %%EndPageSetup
-/F0 10/Times-Roman@0 SF(-5-)282.17 48 Q/F1 10/Courier@0 SF
+/F0 10/Times-Roman@0 SF(-4-)282.17 48 Q/F1 10/Courier@0 SF
 (\(b\) any new file in Source Code Form that contains any Covered)132 84
 Q(Software.)156 96 Q(1.11. "Patent Claims" of a Contributor)108 120 Q
 (means any patent claim\(s\), including without limitation, method,)132
@@ -348,11 +342,11 @@ Q(Contributions or its Contributor Version.)132 636 Q
 (The licenses granted in Section 2.1 with respect to any Contribution)
 108 684 Q(become effective for each Contribution on the date the Contri\
 butor first)108 696 Q(distributes such Contribution.)108 708 Q 0 Cg EP
-%%Page: 6 6
+%%Page: 5 6
 %%BeginPageSetup
 BP
 %%EndPageSetup
-/F0 10/Times-Roman@0 SF(-6-)282.17 48 Q/F1 10/Courier@0 SF
+/F0 10/Times-Roman@0 SF(-5-)282.17 48 Q/F1 10/Courier@0 SF
 (2.3. Limitations on Grant Scope)108 84 Q(The licenses granted in this \
 Section 2 are the only rights granted under)108 108 Q(this License. No \
 additional rights or licenses will be implied from the)108 120 Q
@@ -391,11 +385,11 @@ Q(applicable copyright doctrines of fair use, fair dealing, or other)108
 Q(All distribution of Covered Software in Source Code Form, including a\
 ny)108 708 Q(Modifications that You create or to which You contribute, \
 must be under)108 720 Q 0 Cg EP
-%%Page: 7 7
+%%Page: 6 7
 %%BeginPageSetup
 BP
 %%EndPageSetup
-/F0 10/Times-Roman@0 SF(-7-)282.17 48 Q/F1 10/Courier@0 SF
+/F0 10/Times-Roman@0 SF(-6-)282.17 48 Q/F1 10/Courier@0 SF
 (the terms of this License. You must inform recipients that the Source)
 108 84 Q
 (Code Form of the Covered Software is governed by the terms of this)108
@@ -457,11 +451,11 @@ y, support,)108 684 Q
 696 Q
 (disclaimers of warranty and limitations of liability specific to any)
 108 708 Q(jurisdiction.)108 720 Q 0 Cg EP
-%%Page: 8 8
+%%Page: 7 8
 %%BeginPageSetup
 BP
 %%EndPageSetup
-/F0 10/Times-Roman@0 SF(-8-)282.17 48 Q/F1 10/Courier@0 SF
+/F0 10/Times-Roman@0 SF(-7-)282.17 48 Q/F1 10/Courier@0 SF
 (4. Inability to Comply Due to Statute or Regulation)108 84 Q
 (---------------------------------------------------)108 96 Q
 (If it is impossible for You to comply with any of the terms of this)108
@@ -525,11 +519,11 @@ E 12(*p)108 696 S
 E 12(*S)108 720 S
 (hould any Covered Software prove defective in any respect, You)-12 E(*)
 30 E 0 Cg EP
-%%Page: 9 9
+%%Page: 8 9
 %%BeginPageSetup
 BP
 %%EndPageSetup
-/F0 10/Times-Roman@0 SF(-9-)282.17 48 Q/F1 10/Courier@0 SF 12(*\()108 84
+/F0 10/Times-Roman@0 SF(-8-)282.17 48 Q/F1 10/Courier@0 SF 12(*\()108 84
 S(not any Contributor\) assume the cost of any necessary servicing,)-12
 E(*)18 E 12(*r)108 96 S
 (epair, or correction. This disclaimer of warranty constitutes an)-12 E
@@ -592,12 +586,12 @@ ws of that)108 504 Q
 (shall not be used to construe this License against a Contributor.)108
 660 Q(10. Versions of the License)108 684 Q(---------------------------)
 108 696 Q(10.1. New Versions)108 720 Q 0 Cg EP
-%%Page: 10 10
+%%Page: 9 10
 %%BeginPageSetup
 BP
 %%EndPageSetup
-/F0 10/Times-Roman@0 SF(-10-)279.67 48 Q/F1 10/Courier@0 SF(Mozilla Fou\
-ndation is the license steward. Except as provided in Section)108 84 Q
+/F0 10/Times-Roman@0 SF(-9-)282.17 48 Q/F1 10/Courier@0 SF(Mozilla Foun\
+dation is the license steward. Except as provided in Section)108 84 Q
 (10.3, no one other than the license steward has the right to modify or)
 108 96 Q
 (publish new versions of this License. Each version will be given a)108
@@ -637,20 +631,20 @@ Q(Exhibit B - "Incompatible With Secondary Licenses" Notice)108 576 Q
 (---------------------------------------------------------)108 588 Q
 (This Source Code Form is "Incompatible With Secondary Licenses", as)120
 612 Q(defined by the Mozilla Public License, v. 2.0.)120 624 Q 0 Cg EP
-%%Page: 11 11
+%%Page: 10 11
 %%BeginPageSetup
 BP
 %%EndPageSetup
-/F0 10/Times-Roman@0 SF(-11-)279.67 48 Q/F1 20/Times-Bold@0 SF
+/F0 10/Times-Roman@0 SF(-10-)279.67 48 Q/F1 20/Times-Bold@0 SF
 (2. Obtaining the sour)166.79 94 Q(ce code)-.36 E/F2 12/Times-Roman@0 SF
 (Source code can be obtained using)72 122 Q/F3 12/Times-Italic@0 SF
 (Subverison)3 E F2(from)3 E/F4 12/Courier@0 SF
 (http://svn.nishi.boats/repo/fbde1)3 E F2(.)3 E 0 Cg EP
-%%Page: 12 12
+%%Page: 11 12
 %%BeginPageSetup
 BP
 %%EndPageSetup
-/F0 10/Times-Roman@0 SF(-12-)279.67 48 Q/F1 20/Times-Bold@0 SF(3. Dir)
+/F0 10/Times-Roman@0 SF(-11-)279.67 48 Q/F1 20/Times-Bold@0 SF(3. Dir)
 208.17 94 Q(ectory lay)-.36 E(out)-.5 E .4 LW 503.997 122.1 72.002 122.1
 DL/F2 10/Times-Bold@0 SF 148.469(Name Description)134.99 131.6 R 236.874
 122.1 236.874 136.1 DL 236.874 136.1 72.002 136.1 DL 434.463 136.1
@@ -669,11 +663,11 @@ E F0(\).)A 236.874 162.1 236.874 188.1 DL 236.874 188.1 72.002 188.1 DL
 93.764 E F4(ver)A(sion)-.1 E F0(\).)A 503.997 214.1 72.002 214.1 DL
 236.874 188.1 236.874 214.1 DL 503.997 122.1 503.997 214.1 DL 72.002
 122.1 72.002 214.1 DL 0 Cg EP
-%%Page: 13 13
+%%Page: 12 13
 %%BeginPageSetup
 BP
 %%EndPageSetup
-/F0 10/Times-Roman@0 SF(-13-)279.67 48 Q/F1 20/Times-Bold@0 SF
+/F0 10/Times-Roman@0 SF(-12-)279.67 48 Q/F1 20/Times-Bold@0 SF
 (4. Building)241.31 94 Q(4.1. Supported platf)181.58 144 Q(orms)-.5 E
 .48 LW 503.996 169 72.003 169 DL/F2 12/Times-Bold@0 SF(Platf)136.613 180
 Q 142.026(orm Status)-.3 F 262.97 169 262.97 185 DL 262.97 185 72.003
